@@ -1,3 +1,4 @@
+* Replace shortcuts by menu favorites
 * Move Plugins into toolbar Actions
 * Add url to list view
 * Add dynamic icon for url
